<resources>
    <string name="app_name">Bebidas</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="menu_principal_label">First Fragment</string>
    <string name="sobre_fragment_label">Second Fragment</string>
    <string name="sobre">Sobre</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="buttonBebidas">Bebidas</string>
    <string name="sobre_app"> App para gerir bebidas</string>
    <string name="adicionar">adicionar</string>
    <string name="editar">editar</string>
    <string name="eliminar">eliminar</string>
    <string name="nomeBebida">Nome da Bebida</string>
    <string name="descricaoBebida">Descricão da Bebida</string>
    <string name="marcas">Marca</string>
    <string name="guardar">Guardar</string>
    <string name="cancelar">Cancelar</string>
    <string name="nome_da_bebida_obrigatorio">Nome da Bebida Obrigatorio</string>
    <string name="desc_da_bebida_nao_e_obrigatoria">Desc da Bebida Nao e Obrigatoria</string>
    <string name="erro_guardar_bebida">Erro Guardar Bebida</string>
    <string name="bebida_guardada_com_sucesso">Bebida Guardada com Sucesso</string>
    <string name="bebida_eliminada_com_sucesso">Bebida Eliminada com Sucesso</string>
    <string name="erro_eliminar_bebida">Erro Eliminar Bebida</string>
    <string name="editar_bebida_label">Editar Bebida</string>
    <string name="nova_bebida_label">Nova Bebida</string>
    <string name="buttonMarcas">Marcas</string>
    <string name="NomeMarca">Marca</string>
    <string name="Nome_Marca_obrigatorio">Nome Marca obrigatorio</string>
    <string name="erro_guardar_marca">Erro Guardar Marca</string>
    <string name="marca_guardada_com_sucesso">Marca Guardada com Sucesso</string>
    <string name="marca_eliminada_com_sucesso">Marca Eliminada com Sucesso</string>
    <string name="erro_eliminar_marca">Erro Eliminar Marca</string>
    <string name="editar_marca_label">Editar Marca</string>
    <string name="nova_marca_label">Nova Marca</string>
</resources>